final big update before 2021 Fall

--- a/content/courses/ekonometri-ars-I-II/01-ec.html
+++ b/content/courses/ekonometri-ars-I-II/01-ec.html
@@ -33,6 +33,8 @@ weight: 21
 </div>
 <div id="ders-planı-ve-önemli-günler" class="section level2">
 <h2>Ders Planı ve Önemli Günler</h2>
+<div id="ekonometri-araştırmaları-i" class="section level4">
+<h4>Ekonometri Araştırmaları I</h4>
 <table>
 <thead>
 <tr class="header">
@@ -42,20 +44,42 @@ weight: 21
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_I-II_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_I-II_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_I_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_I_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_I-II_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_I-II_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_I_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_I_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷</td>
 </tr>
 </tbody>
 </table>
 </div>
+<div id="ekonometri-araştırmaları-ii" class="section level4">
+<h4>Ekonometri Araştırmaları II</h4>
+<table>
+<thead>
+<tr class="header">
+<th align="left">1. Öğretim</th>
+<th align="left">2. Öğretim</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_II_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_II_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷</td>
+</tr>
+<tr class="even">
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_II_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ars/EC/Ekonometri%20Ars_II_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
 <div id="ders-kaynakları" class="section level2">
 <h2>Ders Kaynakları</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri%20Ars_I-II_Kaynaklarin%20Aciklamasi%20(Kara).pdf">Kaynakların Açıklaması</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri%20Ars_I-II_Kaynaklarin%20Aciklamasi%20(Kara).pdf">Kaynakların Açıklaması</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="ders-değerlendirme-anketi" class="section level2">
