--- a/content/courses/ekonometri-ars-I-II/3-exams-ps.html
+++ b/content/courses/ekonometri-ars-I-II/3-exams-ps.html
@@ -1,6 +1,6 @@
 ---
-title: Ödev ve Sınavlar
-linktitle: Ödev ve Sınavlar
+title: Sınavlar ve Sunum
+linktitle: Sınavlar ve Sunum
 date: "2020-10-05"
 lastmod: "2020-10-13"
 draft: false
@@ -23,25 +23,37 @@ weight: 40
 <p>{{% alert note %}}
 İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder.
 {{% /alert %}}</p>
-<div id="ödevler" class="section level2">
-<h2>Ödevler</h2>
-<ul>
-<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=OOqC0JrtOaI&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷⛔</li>
-</ul></li>
-</ul>
-</div>
 <div id="sınavlar" class="section level2">
 <h2>Sınavlar</h2>
 <ul>
-<li><a href="">CANVAS’ta Online Sınav Nasıl Yapılır?</a> 🇹🇷🔥
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri%20Ars_I-II_Konu%20Onerisi%20Aciklamasi%20(Kara).pdf">Konu Önerisi Açıklaması</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri%20Ars_I-II_Ornek%20Konu%20Aciklamasi%20(Kara).pdf">Örnek Konu Açıklaması</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri%20Ars_I-II_Data%20Aciklamasi%20(Kara).pdf">Data Açıklaması</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri%20Ars_I-II_Makale%20Taslak%20Aciklamasi%20(Kara).pdf">Makale Taslak Açıklaması</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri%20Ars_I-II_Akademik%20Etik%20Aciklamasi%20(Kara).pdf">Akademik Etik Açıklaması</a> 🇹🇷</li>
+<li><a href="https://www.aeaweb.org/jel/guide/jel.php">JEL Sınıflandırma Kodları</a> 🇺🇸</li>
+<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷🔥
 <ul>
-<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
-</ul></li>
-<li><a href="">CANVAS’ta Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷🔥
-<ul>
-<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’de Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
+<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’ye Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷⛔</li>
 </ul></li>
 </ul>
+</div>
+<div id="sunum" class="section level2">
+<h2>Sunum</h2>
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri%20Ars_I_Sunum%20Degerlendirme%20(Kara).pdf">Sunum Değerlendirme Esasları (Ekonometri Araştırmaları I Dersi İçin)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ekonometri%20Ars_II_Sunum%20Degerlendirme%20(Kara).pdf">Sunum Değerlendirme Esasları (Ekonometri Araştırmaları II Dersi İçin)</a> 🇹🇷</li>
+<li><a href="">CANVAS’a Online Klasik Ödev veya Sunum Nasıl Yüklenir?</a> 🇹🇷🔥</li>
+</ul>
+<div id="örnek-makale-ve-sunumlar" class="section level3">
+<h3>Örnek Makale ve Sunumlar</h3>
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Article.pdf">Makale Örneği - Taslak (Ömer Kara)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Makale__Ornek_1__Elif%20Yildiz.pdf">Makale Örneği - 1 (Elif Yıldız - 2021 Bahar 4. Sınıf Öğrencisi)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Makale__Ornek_1__Ilknur%20Busra%20Cakir.pdf">Makale Örneği - 2 (İlknur Büşra Çakır - 2021 Bahar 4. Sınıf Öğrencisi)</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Sunum__Ornek_1__Omer%20Kara.pdf">Sunum Örneği - 1 (Ömer Kara)</a> 🇺🇸</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Sunum__Ornek_2__Omer%20Kara.pdf">Sunum Örneği - 2 (Ömer Kara)</a> 🇺🇸</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Sunum__Ornek_3__Ilknur%20Busra%20Cakir.pptx">Sunum Örneği - 3 (İlknur Büşra Çakır - 2021 Bahar 4. Sınıf Öğrencisi)</a> 🇺🇸</li>
+</ul>
+</div>
 </div>
