--- a/content/courses/ekonometri-ars-I-II/4-lectures.html
+++ b/content/courses/ekonometri-ars-I-II/4-lectures.html
@@ -26,12 +26,6 @@ weight: 50
 <p>{{% alert note %}}
 <code>MK</code>, <font color="red"><strong><a href="https://scholar.google.com/citations?user=U45CVc0AAAAJ&amp;hl=tr">Prof. Dr. Ş. Metin Kara</a></strong></font> tarafından kaleme alınan içerikleri ifade eder…
 {{% /alert %}}</p>
-<div id="data-kaynakları" class="section level2">
-<h2>Data Kaynakları</h2>
-<ul>
-<li>🇹🇷🔥</li>
-</ul>
-</div>
 <div id="akademik-makale-yazım-esasları" class="section level2">
 <h2>Akademik Makale Yazım Esasları</h2>
 <div id="kitaplar-ve-makaleler" class="section level4">
@@ -88,13 +82,6 @@ weight: 50
 <li>🇹🇷🔥</li>
 </ul>
 </div>
-<div id="örnek-makale-sunumlar" class="section level4">
-<h4>Örnek Makale Sunumlar</h4>
-<ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/Ornek_1_(Crypto).pdf">Örnek Sunum 1</a> 🇺🇸</li>
-<li><a href="../../../repo/akek/courses/ekonometri-ars/Ornek_2_(Meat%20Demand).pdf">Örnek Sunum 2</a> 🇺🇸</li>
-</ul>
-</div>
 </div>
 <div id="akademik-makale-yayınlama-esasları" class="section level2">
 <h2>Akademik Makale Yayınlama Esasları</h2>
@@ -133,6 +120,27 @@ weight: 50
 </ul>
 </div>
 <div id="diğer-kaynaklar-3" class="section level4">
+<h4>Diğer Kaynaklar</h4>
+<ul>
+<li>🇹🇷🔥</li>
+</ul>
+</div>
+</div>
+<div id="anket-uygulama-esasları" class="section level2">
+<h2>Anket Uygulama Esasları</h2>
+<div id="kitaplar-ve-makaleler-4" class="section level4">
+<h4>Kitaplar ve Makaleler</h4>
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Bas__Anket%20Hazirlama%20Kilavuzu.pdf">Anket Hazırlama Kılavuzu (Baş)</a> 🇹🇷</li>
+</ul>
+</div>
+<div id="slaytlar-4" class="section level4">
+<h4>Slaytlar</h4>
+<ul>
+<li>🇹🇷🔥</li>
+</ul>
+</div>
+<div id="diğer-kaynaklar-4" class="section level4">
 <h4>Diğer Kaynaklar</h4>
 <ul>
 <li>🇹🇷🔥</li>
