--- a/content/courses/ekonomi-i/4-lectures.html
+++ b/content/courses/ekonomi-i/4-lectures.html
@@ -47,15 +47,15 @@ weight: 50
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Notes%20(Kara).pdf">Notes</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Notes%20(Kara).pdf">Notes</a></td>
 </tr>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20(Kara).pdf">Çalışma Soruları</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a></td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 </tbody>
 </table>
@@ -80,15 +80,15 @@ weight: 50
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%202%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%202%20Notes%20(Kara).pdf">Notes</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%202%20Notes%20(Kara).pdf">Notes</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%202%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%202%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%202%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%202%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%202%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%202%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 </tbody>
 </table>
@@ -117,19 +117,19 @@ weight: 50
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%203%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%203%20Notes%20(Kara).pdf">Notes</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%203%20Notes%20(Kara).pdf">Notes</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%203%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%203%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%203%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%203%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%203%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%203%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%203%20CS%20Cevaplar__Grafiksel%20(Kara).pdf">Çalışma Soruları Cevaplar - Grafiksel</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%203%20Worksheet%20Solutions__Graphical%20(Kara).pdf">Worksheet Solutions - Graphical</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%203%20Worksheet%20Solutions__Graphical%20(Kara).pdf">Worksheet Solutions - Graphical</a></td>
 </tr>
 </tbody>
 </table>
@@ -158,15 +158,15 @@ weight: 50
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%204%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%204%20Notes%20(Kara).pdf">Notes</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%204%20Notes%20(Kara).pdf">Notes</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%204%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%204%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%204%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%204%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%204%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%204%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 </tbody>
 </table>
@@ -199,23 +199,23 @@ weight: 50
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%205%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Notes%20(Kara).pdf">Notes</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Notes%20(Kara).pdf">Notes</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%205%20Vergi%20Ornegi%20(Kara).jpg">Vergi Örneği</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Tax%20Example%20(Kara).jpg">Tax Example</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Tax%20Example%20(Kara).jpg">Tax Example</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%205%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%205%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%205%20CS%20Cevaplar__Grafiksel%20(Kara).pdf">Çalışma Soruları Cevaplar - Grafiksel</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Worksheet%20Solutions__Graphical%20(Kara).pdf">Worksheet Solutions - Graphical</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%205%20Worksheet%20Solutions__Graphical%20(Kara).pdf">Worksheet Solutions - Graphical</a></td>
 </tr>
 </tbody>
 </table>
@@ -244,19 +244,19 @@ weight: 50
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%206%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%206%20Notes%20(Kara).pdf">Notes</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%206%20Notes%20(Kara).pdf">Notes</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%206%20Ek%20Notlar%20(Kara).pdf">Ek Notlar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%206%20Additional%20Notes%20(Kara).pdf">Additional Notes</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%206%20Additional%20Notes%20(Kara).pdf">Additional Notes</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%206%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%206%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%206%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%206%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%206%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%206%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 </tbody>
 </table>
@@ -285,15 +285,15 @@ weight: 50
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%207%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%207%20Notes%20(Kara).pdf">Notes</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%207%20Notes%20(Kara).pdf">Notes</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%207%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%207%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%207%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%207%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%207%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%207%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 </tbody>
 </table>
@@ -318,15 +318,15 @@ weight: 50
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%208%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%208%20Notes%20(Kara).pdf">Notes</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%208%20Notes%20(Kara).pdf">Notes</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%208%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%208%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%208%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%208%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%208%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%208%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 </tbody>
 </table>
@@ -351,15 +351,15 @@ weight: 50
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%209%20Piyasa%20Karsilastirimasi%20(Kara).pdf">Piyasa Karşılaştırılması</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%209%20Market%20Comparison%20(Kara).pdf">Market Comparison</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%209%20Market%20Comparison%20(Kara).pdf">Market Comparison</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%209%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%209%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%209%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%209%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%209%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%209%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 </tbody>
 </table>
@@ -384,11 +384,11 @@ weight: 50
 </tr>
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%2010%20CS%20(Kara).pdf">Çalışma Soruları</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%2010%20Worksheet%20(Kara).pdf">Worksheet</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%2010%20Worksheet%20(Kara).pdf">Worksheet</a></td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%2010%20CS%20Cevaplar%20(Kara).pdf">Çalışma Soruları Cevaplar</a> 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%2010%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%2010%20Worksheet%20Solutions%20(Kara).pdf">Worksheet Solutions</a></td>
 </tr>
 </tbody>
 </table>
