--- a/content/courses/economics/3-exams-ps.html
+++ b/content/courses/economics/3-exams-ps.html
@@ -53,13 +53,13 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 </tbody>
 </table>
 <ul>
-<li><a href="">CANVAS’ta Online Sınav Nasıl Yapılır?</a> 🇹🇷🔥
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷🔥
 <ul>
-<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
+<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
 </ul></li>
-<li><a href="">CANVAS’ta Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷🔥
+<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir</a> 🇹🇷🔥
 <ul>
-<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’de Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
+<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’ye Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷⛔</li>
 </ul></li>
 </ul>
 </div>
