--- a/content/courses/ekonometri-i/3-exams-ps.html
+++ b/content/courses/ekonometri-i/3-exams-ps.html
@@ -37,13 +37,13 @@ weight: 40
 <ul>
 <li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a> 🇹🇷🔥</li>
-<li><a href="">CANVAS’ta Online Sınav Nasıl Yapılır?</a> 🇹🇷🔥
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷🔥
 <ul>
-<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
+<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
 </ul></li>
-<li><a href="">CANVAS’ta Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷🔥
+<li><a href="">CANVAS’a Online Klasik Sınav Nasıl Yüklenir</a> 🇹🇷🔥
 <ul>
-<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’de Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
+<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’ye Online Klasik Sınav Nasıl Yüklenir?</a> 🇹🇷⛔</li>
 </ul></li>
 </ul>
 </div>
