--- a/content/courses/ekonometri-i/4-lectures.html
+++ b/content/courses/ekonometri-i/4-lectures.html
@@ -27,14 +27,14 @@ weight: 50
 <h2>Hafta #1</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Hafta_1.pdf">Slaytlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Hafta_1.pdf">Slaytlar</a> 🇹🇷🔄</li>
 </ul>
 </div>
 <div id="hafta-2" class="section level2">
 <h2>Hafta #2</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Hafta_2.pdf">Slaytlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Hafta_2.pdf">Slaytlar</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="hafta-3" class="section level2">
