--- a/content/courses/ekonomi-i/4-lectures.html
+++ b/content/courses/ekonomi-i/4-lectures.html
@@ -379,7 +379,7 @@ weight: 50
 <td align="left"><a href="">Video</a> 🔥</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%2010%20(Kara).pptx">Slaytlar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Ekonomiye%20Giris_I%20-%20Hafta%2010%20(Kara).pptx">Slaytlar</a></td>
 <td align="left"><a href="../../../repo/akek/courses/ekonomi-i/Economics_I%20-%20Week%2010%20(Kara).pptx">Slides</a></td>
 </tr>
 <tr class="odd">
