--- a/content/courses/ekonometri-i/4-lectures.html
+++ b/content/courses/ekonometri-i/4-lectures.html
@@ -27,7 +27,7 @@ weight: 50
 <h2>Hafta #1</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Hafta_1.pdf">Slaytlar</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Hafta_1.pdf">Slaytlar</a> 🇹🇷🔄</li>
 </ul>
 </div>
 <div id="hafta-2" class="section level2">
@@ -41,7 +41,7 @@ weight: 50
 <h2>Hafta #3</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Hafta_3.pdf">Slaytlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I_-_Hafta_3.pdf">Slaytlar</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="hafta-4" class="section level2">
