r mini bootcamp links update

--- a/content/courses/ekonometrik-modelleme/4-lectures.html
+++ b/content/courses/ekonometrik-modelleme/4-lectures.html
@@ -23,6 +23,15 @@ weight: 50
 <p>{{% alert note %}}
 İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder.
 {{% /alert %}}</p>
+<div id="r-mini-bootcamp" class="section level2">
+<h2>R mini BootCamp</h2>
+<ul>
+<li><a href="https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.html">HTML</a> 🇺🇸
+<ul>
+<li><a href="https://akademiekonometri.bitbucket.io/R_mini_BootCamp/R_mini_BootCamp.R">R</a> 🇺🇸</li>
+</ul></li>
+</ul>
+</div>
 <div id="hafta-1" class="section level2">
 <h2>Hafta #1</h2>
 <ul>
